[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencrush-langraph"
version = "0.1.0"
description = "LangGraph module wrapping TokenCrush /v1/crush"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
  "langgraph>=0.2.30",
  "pydantic>=2.5,<3",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/your-org/tokencrush-langraph"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


